--- a/lib/milk_web/live/feed_live/index.html.leex
+++ b/lib/milk_web/live/feed_live/index.html.leex
@@ -9,7 +9,7 @@
   <tbody id="feeds">
     <%= for feed <- @feeds do %>
       <tr id="feed-<%= feed.id %>">
-        <td><%= feed.started_at %></td>
+        <td><%= feed.started_at |> relative_datetime %></td>
       </tr>
     <% end %>
   </tbody>
