--- a/lib/milk_web/live/bottle_live/form_component.html.leex
+++ b/lib/milk_web/live/bottle_live/form_component.html.leex
@@ -1,18 +1,20 @@
-<h2><%= @title %></h2>
-
 <%= f = form_for @changeset, "#",
   id: "bottle-form",
   phx_target: @myself,
   phx_change: "validate",
   phx_submit: "save" %>
 
-  <%= label f, :name %>
-  <%= text_input f, :name %>
-  <%= error_tag f, :name %>
+  <div class="mb-3">
+    <%= label f, :name, class: "form-label" %>
+    <%= text_input f, :name, class: "form-control" %>
+    <%= error_tag f, :name %>
+  </div>
 
-  <%= label f, :color %>
-  <%= color_input f, :color %>
-  <%= error_tag f, :color %>
+  <div class="mb-3">
+    <%= label f, :color, class: "form-label" %>
+    <%= color_input f, :color, class: "form-control form-control-color" %>
+    <%= error_tag f, :color %>
+  </div>
 
-  <%= submit "Save", phx_disable_with: "Saving..." %>
+  <%= submit "Save", class: "btn btn-primary", phx_disable_with: "Saving..." %>
 </form>
