--- a/lib/milk_web/live/bottle_live/index.html.leex
+++ b/lib/milk_web/live/bottle_live/index.html.leex
@@ -1,5 +1,3 @@
-<h1>Listing Bottles</h1>
-
 <%= if @live_action in [:new] do %>
   <%= live_modal MilkWeb.BottleLive.FormComponent,
     id: @bottle.id || :new,
@@ -9,7 +7,7 @@
     return_to: Routes.bottle_index_path(@socket, :index) %>
 <% end %>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Name</th>
