Add number of feeds for the past 24 hours

--- a/lib/milk_web/live/feed_live/index.html.leex
+++ b/lib/milk_web/live/feed_live/index.html.leex
@@ -7,7 +7,7 @@
 <table class="table">
   <thead>
     <tr>
-      <th>Past 24 hours</th>
+      <th>Past 24 hours - <%= print_feeds(@feeds) %></th>
     </tr>
   </thead>
   <tbody id="feeds">
