--- a/lib/milk_web/templates/layout/root.html.leex
+++ b/lib/milk_web/templates/layout/root.html.leex
@@ -25,6 +25,10 @@
             <a class="nav-link <%= if hd(@conn.path_info) == "diapers", do: "active" %>"
               href="<%= Routes.diaper_index_path(@conn, :index) %>">Diapers</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link <%= if hd(@conn.path_info) == "weights", do: "active" %>"
+              href="<%= Routes.weight_index_path(@conn, :index) %>">Weights</a>
+          </li>
         <ul>
       </nav>
     </header>
