--- a/lib/milk_web/live/weight_live/form_component.html.leex
+++ b/lib/milk_web/live/weight_live/form_component.html.leex
@@ -4,17 +4,41 @@
   phx_change: "validate",
   phx_submit: "save" %>
 
-  <div class="mb-3">
-    <%= label f, :date, class: "form-label" %>
+  <div class="input-group">
+    <span class="input-group-text">On</span>
     <%= date_input f, :date, class: "form-control" %>
     <%= error_tag f, :date %>
   </div>
 
-  <div class="mb-3">
-    <%= label f, :grams, class: "form-label" %>
-    <%= number_input f, :grams, class: "form-control" %>
-    <%= error_tag f, :grams %>
+  <div class="input-group mt-3">
+    <div class="input-group-text">
+      <%= radio_button f, :unit, "metric", class: "form-check-input mt-0" %>
+    </div>
+    <%= number_input f, :grams, min: 0, disabled: not metric?(@changeset),
+        class: "form-control #{if metric?(@changeset) and f.errors[:grams], do: "is-invalid"}" %>
+    <span class="input-group-text">grams</span>
   </div>
+  <%= if metric?(@changeset) do %>
+    <%= error_tag f, :grams %>
+  <% end %>
 
-  <%= submit "Save", phx_disable_with: "Saving...", class: "btn btn-primary" %>
+  <div class="input-group mt-3">
+    <div class="input-group-text">
+      <%= radio_button f, :unit, "imperial", class: "form-check-input mt-0" %>
+    </div>
+    <%= number_input f, :lb, min: 0, disabled: not imperial?(@changeset),
+        class: "form-control #{if imperial?(@changeset) and f.errors[:lb], do: "is-invalid"}" %>
+    <span class="input-group-text">lb</span>
+    <%= number_input f, :oz, min: 0, disabled: not imperial?(@changeset),
+        class: "form-control #{if imperial?(@changeset) and f.errors[:oz], do: "is-invalid"}" %>
+    <span class="input-group-text">oz</span>
+  </div>
+  <%= if imperial?(@changeset) do %>
+    <div class="row">
+      <span class="col"><%= error_tag f, :lb %></span>
+      <span class="col"><%= error_tag f, :oz %></span>
+    </div>
+  <% end %>
+
+  <%= submit "Save", phx_disable_with: "Saving...", class: "mt-3 btn btn-primary" %>
 </form>
