--- a/lib/milk_web/live/feed_live/index.html.leex
+++ b/lib/milk_web/live/feed_live/index.html.leex
@@ -1,7 +1,17 @@
+<%= if @live_action in [:new, :edit] do %>
+  <%= live_modal MilkWeb.FeedLive.FormComponent,
+    id: @feed.id || :new,
+    title: @page_title,
+    action: @live_action,
+    feed: @feed,
+    return_to: Routes.feed_index_path(@socket, :index) %>
+<% end %>
+
 <%= live_component MilkWeb.FeedLive.TimeComponent, last_feed: @last_feed %>
 
 <div class="row m-0">
-  <button class="btn btn-primary" phx-click="new">Log new feed</button>
+  <%= live_patch "Log new feed...", to: Routes.feed_index_path(@socket, :new),
+      class: "btn btn-primary" %>
 </div>
 
 <table class="table">
