--- a/lib/milk_web/live/feed_live/index.html.leex
+++ b/lib/milk_web/live/feed_live/index.html.leex
@@ -1,4 +1,4 @@
-<%= if @live_action in [:new, :edit] do %>
+<%= if @live_action == :new do %>
   <%= live_modal MilkWeb.FeedLive.FormComponent,
     id: @feed.id || :new,
     title: @page_title,
@@ -9,10 +9,16 @@
 
 <%= live_component MilkWeb.FeedLive.TimeComponent, last_feed: @last_feed %>
 
-<div class="row m-0">
+<div class="row mx-0 mb-3">
   <%= live_patch "Log new feed...", to: Routes.feed_index_path(@socket, :new),
       class: "btn btn-primary" %>
 </div>
+
+<%= if @live_action == :edit do %>
+  <%= live_patch "Close", class: "float-end", to: Routes.feed_index_path(@socket, :index) %>
+<% else %>
+  <%= live_patch "Edit", class: "float-end", to: Routes.feed_index_path(@socket, :edit) %>
+<% end %>
 
 <table class="table">
   <thead>
@@ -34,6 +40,9 @@
           <% end %>
           </span>
         </td>
+        <%= if @live_action == :edit do %>
+          <td><a href="#" phx-click="delete" phx-value-id="<%= feed.id %>">Delete</a></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
