List of sleep sessions

--- a/lib/milk_web/live/sleep_live/form_component.html.leex
+++ b/lib/milk_web/live/sleep_live/form_component.html.leex
@@ -7,7 +7,7 @@
   <div class="mb-3">
     <label class="form-label">Duration</label>
     <h1 class="display-1 text-center font-monospace card">
-      <%= print_duration(@duration) %>
+      <%= print_clock_duration(@duration) %>
     </h1>
     <%= error_tag f, :duration %>
   </div>
